<resources>
    <string name="app_name">Money Diary</string>
    <string name="your_money_your_life">Your Money, Your Life.</string>
    <string name="welcome_to_money_diary">Welcome to Money Diary</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_click_here_for_signing_up">New user? Click here for signing up!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="send_code_number">send code number</string>
    <string name="submit">submit</string>
    <string name="please_enter_received_code_number">Please enter received code number</string>
    <string name="did_not_received_click_here_to_send_a_code_again_after_60_seconds">Did not received? Click here to send a code again after 60 seconds.</string>
    <string name="reconfirm_password">Reconfirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="by_creating_an_account_you_will_be_agreed_to_our_terms_conditions_and_privacy_policy"><![CDATA[By creating an account, you will be agreed to our Terms & Conditions and Privacy Policy.]]></string>
    <string name="signUp">Sign Up</string>
    <string name="hi">Hi, </string>
    <string name="search_elements">Search elements</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="made_by_mmu_diploma_students">Made by MMU Diploma Students.</string>
    <string name="total_income">Total Income: </string>
    <string name="rm">RM </string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>

    <string name="title_activity_add_record">addRecord</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="income">income</string>
    <string name="expense">Expense</string>
    <string name="description">Description: </string>
    <string name="save_record">Save Record</string>
    <string name="category_1">Category 1</string>
    <string name="your_personal_data">Your Personal Data</string>
    <string name="about_us">ABOUT US</string>
    <string name="develop_by_mmu_students">Develop By MMU Students</string>
    <string name="ho_ko_ee">Ho Ko Ee</string>
    <string name="chew_zhi_peng">Chew Zhi Peng</string>
    <string name="student_name">Student Name</string>
    <string name="chan_lin_chee">Chan Lin Chee</string>
    <string name="matthew_labial_john">Matthew Labial John</string>
    <string name="yong_jing_ping">Yong Jing Ping</string>
    <string name="ho_ko_ee_1191202709">1191202709</string>
    <string name="chan_lin_chee_1191202546">1191202546</string>
    <string name="chew_zhi_peng_1191202464">1191202464</string>
    <string name="matthew_labial_john_1191202516">1191202516</string>
    <string name="yong_jing_ping_1191202279">1191202279</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="get_new_password">get new password</string>
    <string name="our_members">Our Members</string>
    <string name="total_expense">Total Expense: </string>
    <string name="category_name">Category Name</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="_0_00">0.00</string>
    <string name="hint">hint</string>
    <string name="contact_us">CONTACT US</string>
    <string name="feel_free_to_drop_us_your_feedback">Feel free to drop us your feedback</string>
    <string name="objectives">This is a project developed by a team of Diploma students in MMU Cyberjaya, Malaysia. We found out that most of the youth in the era down not have a good money management. We hope that by using our application, teenagers can notice what and how much they spend in their activities and improve their money management.</string>
    <string name="mmulogo">mmulogo</string>
    <string name="feedback">FEEDBACK</string>
    <string name="tnc"><![CDATA[Any site that has any form of interaction with its users, whether eCommerce, blog, social media, or professional, should include a terms and conditions page within it. This article defines terms and conditions, explains why it is important and provides examples from well-known websites, which demonstrate good practice in this regard. Table of contents What are the terms and conditions? What are terms of service and terms of use? Who needs terms and conditions and why? What to include in the terms and conditions? How to create terms and conditions? How to enforce terms and conditions? Examples of terms and conditions agreements Create terms and conditions What are the terms and conditions? Terms and conditions agreement (T&C) is a page on a website that sets out the rights and responsibilities of anyone using the site. It effectively forms a contract between the site and the user. Terms and conditions often include an explanation or definition of key terms used in the terms, and outlines the legal limitations of responsibility of the website owner for any damages or harmed incurred during usage of the site. It will include what action may be taken against a user who breaks the terms and may also detail the intellectual rights of the website owner. What are terms of service and terms of use? You most likely have seen terms and conditions referred to by other names such as terms of service (ToS) and terms of use (ToU). These various terms may confuse some people and make them think they\'re completely different agreements. In fact - there is no difference. Any of these three terms (sometimes even referred to as user agreement) can be used as the name of the agreement to indicate the same document. This is demonstrated by the fact that major websites use these phrases interchangeably. It is the information contained within the page that is important. Who needs terms and conditions and why? Unlike a privacy policy, terms and conditions are not a legal requirement. However, it is recommended that every website includes one as it forms the legal basis of the site\'s relationship with the user. Should there be a legal dispute, whether due to a user making a claim against the site or the business suing a user for any reason, the courts will use terms and conditions as a basis for assessing the validity of the complaint? For this reason, it is important that all websites have terms and conditions. In addition, website owners need to ensure that it is sufficiently robust legally to both protect them, and to limit their liability, should they ever face or instigate legal action. What to include in the terms and conditions? While the exact contents vary depending on the nature of the site and the services it provides, terms and conditions will typically include the following elements: Limitation of liability Also known as a disclaimer, this removes any responsibility for errors in the information on the website. If the website allows users to comment or add content to the site (e.g. on a blog or content sharing site), then it should include a section that removes any accountability for posts that may be considered offensive. It is sensible to also state that any third party content on the site is not endorsed by the site owner, and is not indicative of their opinion. Copyright Whether the site sells products, services, or shares information, it should have a copyright notice that includes the current year. This section should inform users that all content, logo, and branding are the intellectual property of the site owner.]]></string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="pnp">Importance of a Privacy Policy A privacy policy is one of the most important documents on any website. It details your company\'s views and procedures on the information collected from visitors. Although a privacy policy is technically a legal document, great effort should be made to craft a document that is both accurate and easy to understand, obscuring hidden clauses in reams of text is not acceptable. The main sections are as follows: Introduction: This section can tell your visitor a little about your organization, and any special information or functions that your website has. If your website has special conditions for collecting information from children (under 16 etc), you should state them clearly in this section. Information Collected: Visitors have a right to know what information you are collecting. It may be obvious that you are collecting personal details by asking them to complete a form, but you should make it clear. You should also include information logged by your servers, such as hostnames and IP addresses. Method of Collection: This details the methods you use to collect the information. Is it all automated? Do the forms visitors fill in collect other information, such as the original referrer? All of these questions will help you build a detailed description of how you collect information. Storage of Information: How is the information stored? If you store information in a database and are located in the UK you may need to register with the government regarding the data protection act. If your servers are in the EU you will need to ask permission to transmit data outside the union, even if it stays within your company. Visitors have a right to know that you will make every effort to store their personal information in a safe and secure environment. Contact details: Its important to be as transparent as possible, and allow users to contact you if they have a query. You should feature both an email address (or online form), as well as a real world address where a user can write to.</string>
    <string name="select_date">Select Date...</string>
    <string name="delete">Delete</string>
    <string name="swipe_to_view_our_members"><![CDATA[<<< Swipe to view our members >>>]]></string>
    <string name="button">Button</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="total_expense_rm">Total Expense: RM</string>
    <string name="total_income_rm" >Total Income:   RM</string>
    <string name="money_diary_official">Money Diary Official</string>
    <string name="moneydiaryofficial">moneydiaryofficial</string>

    <string-array name="incomeCategory">
        <item>Full Time Job 1</item>
        <item>Full Time Job 2</item>
        <item>Part Time Job 1</item>
        <item>Part Time Job 2</item>
        <item>Investment</item>
    </string-array>

    <string-array name="expenseCategory">
        <item>Groceries</item>
        <item>Utilities</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>

</resources>