<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NonEditableUserData">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="40dp"
            android:layout_height="37dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/viewProfileEmail"
            app:layout_constraintEnd_toStartOf="@+id/viewProfileEmail"
            app:layout_constraintTop_toTopOf="@+id/viewProfileEmail"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/mail_logo" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/viewProfileName"
            app:layout_constraintEnd_toStartOf="@+id/viewProfileName"
            app:layout_constraintTop_toTopOf="@+id/viewProfileName"
            app:srcCompat="@drawable/person_logo" />

        <TextView
            android:id="@+id/viewProfileName"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:autofillHints=""
            android:backgroundTint="@color/sysLightBlue"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/sysLightBlue"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewProfileName" />

        <TextView
            android:id="@+id/profileTtlExpense"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/total_expense"
            android:text="@string/_0_00"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewProfileEmail" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_expense_rm"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileTtlExpense"
            app:layout_constraintStart_toStartOf="@+id/profileTtlExpense"
            app:layout_constraintTop_toTopOf="@+id/profileTtlExpense" />

        <TextView
            android:id="@+id/profileTtlIncome"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/total_expense"
            android:text="@string/_0_00"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTtlExpense" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_income_rm"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileTtlIncome"
            app:layout_constraintStart_toStartOf="@+id/profileTtlIncome"
            app:layout_constraintTop_toTopOf="@+id/profileTtlIncome" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>