<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfdfda"
    tools:context=".ForgetPassword">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/emailForReset"
        app:layout_constraintEnd_toEndOf="@+id/emailForReset"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/emailForReset"
        app:layout_constraintTop_toTopOf="@+id/emailForReset"
        app:srcCompat="@drawable/mail_logo" />

    <EditText
        android:id="@+id/emailForReset"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:backgroundTint="@color/sysLightBlue"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetPassBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/search_icon_bg"
        android:fontFamily="@font/roboto"
        android:text="@string/get_new_password"
        android:textSize="24sp"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>